--- a/builder-debug.yml
+++ b/builder-debug.yml
@@ -1,9 +1,16 @@
 x64:
   firstOrDefaultFilePatterns:
-    - '**/*'
     - '!**/node_modules'
     - '!build{,/**/*}'
     - '!dist{,/**/*}'
+    - main.js
+    - service/*
+    - public/*
+    - public/assets/*
+    - public/assets/bank/*
+    - preload.js
+    - config.js
+    - package.json
     - '!**/*.{iml,hprof,orig,pyc,pyo,rbc,swp,csproj,sln,suo,xproj,cc,d.ts,pdb}'
     - '!**/._*'
     - '!**/electron-builder.{yaml,yml,json,json5,toml}'
@@ -11,7 +18,16 @@ x64:
     - '!.yarn{,/**/*}'
     - '!.editorconfig'
     - '!.yarnrc.yml'
-  nodeModuleFilePatterns: []
+  nodeModuleFilePatterns:
+    - '**/*'
+    - main.js
+    - service/*
+    - public/*
+    - public/assets/*
+    - public/assets/bank/*
+    - preload.js
+    - config.js
+    - package.json
 nsis:
   script: |-
     !include "D:\a\winapp-auto-bank\winapp-auto-bank\node_modules\app-builder-lib\templates\nsis\include\StdUtils.nsh"
@@ -87,7 +103,7 @@ nsis:
       !insertmacro MUI_LANGUAGE "Vietnamese"
     !macroend
 
-    !include "C:\Users\RUNNER~1\AppData\Local\Temp\t-KJWYrW\0-messages.nsh"
+    !include "C:\Users\RUNNER~1\AppData\Local\Temp\t-DITyhH\0-messages.nsh"
     !addplugindir /x86-unicode "C:\Users\runneradmin\AppData\Local\electron-builder\Cache\nsis\nsis-resources-3.4.1\plugins\x86-unicode"
 
     Var newStartMenuLink
